--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
+            render.yaml:
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
